--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -72,7 +72,7 @@
                             </ng-select>
                         </div>
                         <div class="mb-3 text-start" *ngIf="isDiscoveryOtherSelected">
-                            <input type="text" formControlName="discoveryTypeDescription" class="form-control bg-secondary" placeholder="Example: Instagram">
+                            <input type="text" formControlName="discoveryDescription" class="form-control bg-secondary" placeholder="Example: Instagram">
                         </div>
                         <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
                     </form>
