--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,23 @@
 <div class="position-relative">
     <div class="home-content primary-border-b position-relative overflow-hidden">
         <div class="bubble-container"></div>
-        <div class="left-content w-100 position-relative">
-            <div class="greeting">
-                <span>👋</span>
-                <a href="" class="typewrite text-blue text-decoration-none" data-period="2000"
-                    data-type='["Hello!", "Hola!", "Konnichiwa!", "Bonjour!", "NEE-haow!"]'>
-                    <span class="wrap"></span>
-                </a>
-            </div>
-            <div class="home-heading">
-                <p>Your End-to-End Web Development
-                & Product Experts</p>
-            </div>
-            <div class="home-hire">
-                <p class="fs-6 text-yellow mb-4">Let's take your website to next level</p>
-                <button class="btn btn-primary">Hire Us</button>
+        <div class="content">
+            <div class="left-content w-100 position-relative">
+                <div class="greeting">
+                    <span>👋</span>
+                    <a href="" class="typewrite text-blue text-decoration-none" data-period="2000"
+                        data-type='["Hello!", "Hola!", "Konnichiwa!", "Bonjour!", "NEE-haow!"]'>
+                        <span class="wrap"></span>
+                    </a>
+                </div>
+                <div class="home-heading">
+                    <p>Your End-to-End Web Development
+                    & Product Experts</p>
+                </div>
+                <div class="home-hire">
+                    <p class="fs-6 text-yellow mb-4">Let's take your website to next level</p>
+                    <button class="btn btn-primary">Hire Us</button>
+                </div>
             </div>
         </div>
     </div>
