--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div *ngFor="let project of (showAllProjects ? projects : projects.slice(0, 3))" class="col-lg-4 col-md-6 col-sm-12 mb-5">
-        <div class="{{ project.borderClass }} rounded-3 overflow-hidden">
+        <div class="{{ project.borderClass }} rounded-3 overflow-hidden h-100">
             <div class="h-200 w-100 {{ project.gradientClass }} d-flex align-items-center justify-content-center">
                 <div class="h-80 w-80 bg-electric-blue rounded-circle d-flex align-items-center justify-content-center text-white fs-2">
                     {{ getInitials(project.name) }}
