--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -86,8 +86,8 @@
                     </div>
                     <div>
                         <div class="mb-4 text-start">
-                            <p class="text-small text-secondary mb-2">message us at</p>
-                            <p class="fw-bold text-white">contact.freelancerdevs&#64;gmail.com</p>
+                            <p class="text-small text-secondary mb-2">Message us at</p>
+                            <a href="mailto:contact.freelancerdevs@gmail.com" class="fw-bold text-decoration-none text-blue">contact.freelancerdevs&#64;gmail.com</a>
                         </div>
                         <div class="mb-4 text-start">
                             <p class="text-small text-secondary mb-2">Call us at</p>
