--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -16,6 +16,16 @@
     }
 }
 
+.form-control:-webkit-autofill,
+.form-control:-webkit-autofill:hover, 
+.form-control:-webkit-autofill:focus, 
+.form-control:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #ffffff;
+    transition: background-color 5000s ease-in-out 0s;
+    box-shadow: 0 0 0 0.25rem rgba(#3d2f77, .3);
+}
+
 .ng-select .ng-select-container .ng-value-container .ng-placeholder {
     font-family: 'Montserrat';
 }
