--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -158,6 +158,6 @@
     <div class="rounded-4 primary-border bg-secondary d-flex flex-column align-items-center justify-content-center py-5 px-3 gap-3">
         <p class="fs-3 fw-bold text-center">Ready to start your project?</p>
         <p class="text-secondary my-3 text-center">Let's discuss how we can help you achieve your digital goals and create exceptional experiences for your users.</p>
-        <button class="btn btn-primary">Get in Touch</button>
+        <!-- <button class="btn btn-primary">Get in Touch</button> -->
     </div>
 </div>
