--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,10 +5,10 @@
             <div class="left-content w-100 position-relative">
                 <div class="greeting">
                     <span>👋</span>
-                    <a href="" class="typewrite text-blue text-decoration-none" data-period="2000"
+                    <p class="typewrite text-blue text-decoration-none" data-period="2000"
                         data-type='["Hello!", "Hola!", "Konnichiwa!", "Bonjour!", "NEE-haow!"]'>
                         <span class="wrap"></span>
-                    </a>
+                    </p>
                 </div>
                 <div class="home-heading">
                     <p>Your End-to-End Web Development
@@ -16,8 +16,11 @@
                 </div>
                 <div class="home-hire">
                     <p class="fs-6 text-yellow mb-4">Let's take your website to next level</p>
-                    <button class="btn btn-primary">Hire Us</button>
+                    <button class="btn btn-primary"><a href="#contact-section" class="text-decoration-none text-white">Hire Us</a></button>
                 </div>
+            </div>
+            <div class="w-100">
+                <img src="/assets/hero-svg.svg" class="w-100" />
             </div>
         </div>
     </div>
