--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -41,8 +41,8 @@
     <p class="fs-3 fw-bold my-3">A team of digital craftspeople</p>
     <p class="text-secondary">We're a diverse team of designers, developers, and strategists who are passionate about<br /> creating exceptional digital experiences that solve real problems.</p>
     <div class="approach-container">
-        <div>
-            <img src="/assets/team.svg" class="h-100 w-100" />
+        <div class="py-5">
+            <img src="/assets/accent-team.svg" class="h-100 w-100" />
         </div>
         <div class="approach-content">
             <p class="fs-4 fw-bold">Our approach</p>
