--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -9,6 +9,13 @@
     }
 }
 
+.btn:disabled,
+.btn.disabled {
+    background-color: #3d2f77;
+    color: #fff;
+    opacity: 0.7;
+}
+
 .btn-primary {
     background-color: #3d2f77;
     border-radius: 6px;
