--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="position-relative">
     <div class="home-content primary-border-b position-relative overflow-hidden">
         <div class="bubble-container"></div>
-        <div class="content">
+        <div class="content d-flex align-items-center justify-content-between gap-5 ">
             <div class="left-content w-100 position-relative">
                 <div class="greeting">
                     <span>👋</span>
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="w-100">
-                <img src="/assets/hero-svg.svg" class="w-100" />
+                <img src="/assets/hero-svg.svg" class="w-100 h-450" />
             </div>
         </div>
     </div>
