--- a/src/styles/_misc.scss
+++ b/src/styles/_misc.scss
@@ -138,8 +138,8 @@
 
 .badge-gray {
     background-color:#2a2e36;
-    border-radius: 4px;
-    padding: 4px 8px;
+    border-radius: 20px;
+    padding: 3px 8px;
     font-size: 12px;
     color: #b9b7b7;
 }
@@ -154,4 +154,8 @@
 
 .h-450 {
     height: 450px;
+}
+
+.h-300 {
+    height: 300px;
 }
