--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -155,9 +155,14 @@
         </div>
         </div>
     </div>
-    <div class="rounded-4 primary-border bg-secondary d-flex flex-column align-items-center justify-content-center py-5 px-3 gap-3">
-        <p class="fs-3 fw-bold text-center">Ready to start your project?</p>
-        <p class="text-secondary my-3 text-center">Let's discuss how we can help you achieve your digital goals and create exceptional experiences for your users.</p>
+    <div class="rounded-4 primary-border bg-secondary d-flex align-items-center py-5 px-3 gap-5">
+        <div>
+            <img src="/assets/moon.svg" class="px-4 h-300" />
+        </div>
+        <div>
+            <p class="fs-3 fw-bold">Ready to start your project?</p>
+            <p class="text-secondary my-3">Let's discuss how we can help you achieve your digital goals and create exceptional experiences for your users.</p>
+        </div>
         <!-- <button class="btn btn-primary">Get in Touch</button> -->
     </div>
 </div>
