--- a/src/styles/_queries.scss
+++ b/src/styles/_queries.scss
@@ -8,6 +8,9 @@
     .content {
         max-width: 1300px;
         margin: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
 }
 
@@ -18,7 +21,17 @@
         flex-direction: column-reverse;
         justify-content: center;
         gap: 40px;
-        padding: 0;
+        padding: 100px 0;
+        height: auto;
+
+        .content {
+            max-width: 1300px;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            flex-direction: column-reverse;
+            justify-content: center;
+        }
 
         .left-content {
             text-align: center;
