footer mail update

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -34,8 +34,8 @@
                 <div class="masonry-item-inner">
                     <p class="text-x-large fw-bold text-white mb-4">Contact</p>
                     <div class="text-secondary">
-                        <p class="mb-1">contact.freelancerdevs&#64;gmail.com</p>
-                        <p class="mb-1">+91 8295309717</p>
+                        <a href="mailto:contact.freelancerdevs@gmail.com" class="fw-bold text-decoration-none text-blue">contact.freelancerdevs&#64;gmail.com</a>
+                        <p class="my-1">+91 8295309717</p>
                         <p class="mb-1">Hyderabad, India</p>
                     </div>
                 </div>
