fix project section alignment

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -155,7 +155,7 @@
         </div>
         </div>
     </div>
-    <div class="rounded-4 primary-border bg-secondary d-flex align-items-center py-5 px-3 gap-5">
+    <div class="rounded-4 primary-border bg-secondary display-content align-items-center py-5 px-3 gap-5">
         <div>
             <img src="/assets/moon.svg" class="px-4 h-300" />
         </div>
