--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,24 +8,45 @@
                 </div>
             </div>
             <div class="masonry-item pb-5">
-                <div class="masonry-item-inner">
-                    <div class="masonry-item-inner">
-                        <p class="text-x-large fw-bold text-white mb-4">Quick Links</p>
+                <div class="masonry-item-inner d-flex">
+                    <div class="d-flex gap-5    ">
                         <div>
-                            <ul class="gap-1 d-flex flex-column nav">
-                                <li>
-                                    <a class="text-decoration-none text-secondary" href="#profile-section">About</a>
-                                </li>
-                                <li>
-                                    <a class="text-decoration-none text-secondary" href="#projects-section">Projects</a>
-                                </li>
-                                <li>
-                                    <a class="text-decoration-none text-secondary" href="#experience-section">Experience</a>
-                                </li>
-                                <li>
-                                    <a class="text-decoration-none text-secondary" href="#contact-section">Contact Us</a>
-                                </li>
-                            </ul>
+                            <p class="text-x-large fw-bold text-white mb-4">Quick Links</p>
+                            <div>
+                                <ul class="gap-1 d-flex flex-column nav">
+                                    <li>
+                                        <a class="text-decoration-none text-secondary on-hover-color" href="#profile">About</a>
+                                    </li>
+                                    <li>
+                                        <a class="text-decoration-none text-secondary on-hover-color" href="#projects">Projects</a>
+                                    </li>
+                                    <li>
+                                        <a class="text-decoration-none text-secondary on-hover-color" href="#experience">Experience</a>
+                                    </li>
+                                    <li>
+                                        <a class="text-decoration-none text-secondary on-hover-color" href="#contact">Contact Us</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div>
+                            <p class="text-x-large fw-bold text-white mb-4">Socials</p>
+                            <div>
+                                <ul class="gap-1 d-flex flex-column nav">
+                                    <li>
+                                        <a class="text-decoration-none text-secondary d-flex gap-2 align-items-center on-hover-color cursor-pointer"><i class="bi bi-linkedin"></i><span>LinkedIn</span></a>
+                                    </li>
+                                    <li>
+                                        <a class="text-decoration-none text-secondary d-flex gap-2 align-items-center on-hover-color cursor-pointer"><i class="bi bi-instagram"></i><span>Instagram</span></a>
+                                    </li>
+                                    <li>
+                                        <a class="text-decoration-none text-secondary d-flex gap-2 align-items-center on-hover-color cursor-pointer"><i class="bi bi-twitter-x"></i><span>Twitter</span></a>
+                                    </li>
+                                    <li>
+                                        <a class="text-decoration-none text-secondary d-flex gap-2 align-items-center on-hover-color cursor-pointer"><i class="bi bi-github"></i><span>Github</span></a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
