--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="home-hire">
                     <p class="fs-6 text-yellow mb-4">Let's take your website to next level</p>
-                    <button class="btn btn-primary"><a href="#contact-section" class="text-decoration-none text-white">Hire Us</a></button>
+                    <button class="btn btn-primary"><a href="#contact" class="text-decoration-none text-white">Hire Us</a></button>
                 </div>
             </div>
             <div class="w-100">
