--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -9,6 +9,10 @@
     }
 }
 
+.btn:active {
+    background-color: #3d2f77 !important;
+}
+
 .btn:disabled,
 .btn.disabled {
     background-color: #3d2f77;
