--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -67,7 +67,9 @@
                 background-color: #14142a;
             }
         }
-        
-
     }
+}
+
+textarea.form-control {
+    resize: none;
 }
