--- a/src/styles/_scrollbar.scss
+++ b/src/styles/_scrollbar.scss
@@ -6,10 +6,10 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: gray;
+  background-color: #14142a;
   background-clip: padding-box;
   border-radius: 6px;
-  box-shadow: inset 0 0 0 1px #fff;
+  box-shadow: inset 0 0 0 1px #090E16;
 }
 
 ::-webkit-scrollbar-thumb:horizontal {
@@ -25,7 +25,7 @@
 }
 
 ::-webkit-scrollbar-track-piece {
-  background: rgb(244, 245, 248);
+  background: #090E16;
 }
 
 ::-webkit-scrollbar-corner {
