--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
                     & Product Experts</p>
                 </div>
                 <div class="home-hire">
-                    <p class="fs-6 text-yellow mb-4">Let's take your website to next level</p>
+                    <p class="fs-6 text-secondary mb-4">FreelancerDevs offers expert end-to-end web development, product strategy, UI/UX design, and QA testing. Build, scale, and optimize your digital presence with our experienced team.</p>
                     <button class="btn btn-primary"><a href="#contact" class="text-decoration-none text-white">Hire Us</a></button>
                 </div>
             </div>
