--- a/src/styles/_queries.scss
+++ b/src/styles/_queries.scss
@@ -18,6 +18,10 @@
     display: flex;
 }
 
+.contact-img {
+    height: 280px;
+}
+
 @media (max-width: 991px) { /* Tablets (md to lg) */
     .home-content {
         display: flex;
@@ -47,7 +51,12 @@
         display: flex;
         flex-direction: column;
         text-align: center;
-    }    
+    }
+
+    .contact-img {
+        height: 200px;
+    }
+    
 }
 
 
