--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -33,6 +33,25 @@
 .ng-select {
     background-color: #14142a;
 
+    &.menu-250 {
+        .ng-dropdown-panel {
+            width: 250px;
+        }
+    }
+
+    &.border-none {
+        .ng-select-container {
+            border: 0;
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
+        }
+
+        &.ng-select-opened>.ng-select-container {
+            border: 0;
+        }
+    }
+
+    
     input {
         &:focus {
             color: #fff;
