--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -39,11 +39,24 @@
         }
     }
 
+    &.w-80 {
+        .ng-select-container {
+            width: 80px;
+        }
+    }
+
     &.border-none {
+        border-top-left-radius: 6px;
+        border-bottom-left-radius: 6px;
+
         .ng-select-container {
             border: 0;
-            border-top-left-radius: 4px;
-            border-bottom-left-radius: 4px;
+            border-top-left-radius: 7px;
+            border-bottom-left-radius: 7px;
+
+            .ng-arrow-wrapper {
+                border-right: 1px solid #3d2f77;
+            }
         }
 
         &.ng-select-opened>.ng-select-container {
