--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,7 +11,7 @@
                         <i class="bi  bi-chat-left fs-5 text-blue"></i>
                         <p class="text-x-large fw-bold text-white">Send us a message</p>
                         <p class="text-secondary mx-1">Or</p>
-                        <a href="https://calendly.com/contact-freelancerdevs/30min" target="_blank" class="text-decoration-none text-white btn btn-outline btn-sm d-flex gap-2 align-items-center">
+                        <a href="https://calendly.com/contact-freelancerdevs/30min" target="_blank" class="text-decoration-none text-white btn btn-primary btn-sm d-flex gap-2 align-items-center">
                             <i class="bi bi-calendar-check text-white"></i>
                             <span>Schedule a call!</span>
                         </a>
